--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.kafka.consumer.properties.spring.json.type.mapping=customer:ds.crmservice
 # Email Configuration
 spring.mail.host=${SMTP_HOST:smtp.gmail.com}
 spring.mail.port=${SMTP_PORT:587}
-spring.mail.username=ediss.hdurvasu@gmail.com
-spring.mail.password=xwgatlpjtwammrxb
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
